created folder "events" added rep policy.

--- a/ui.content/pom.xml
+++ b/ui.content/pom.xml
@@ -99,6 +99,9 @@
                             <target>/apps/aem-workbook/install</target>
                         </embedded>
                     </embeddeds>
+                    <properties>
+                        <acHandling>overwrite</acHandling>
+                    </properties>
                 </configuration>
             </plugin>
         </plugins>
