--- a/it.launcher/pom.xml
+++ b/it.launcher/pom.xml
@@ -18,7 +18,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>by.gomel.epam</groupId>
+        <groupId>com.company</groupId>
         <artifactId>aem-workbook</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
@@ -323,12 +323,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>by.gomel.epam</groupId>
+            <groupId>com.company</groupId>
             <artifactId>aem-workbook.it.tests</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>by.gomel.epam</groupId>
+            <groupId>com.company</groupId>
             <artifactId>aem-workbook.core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
