--- a/it.tests/pom.xml
+++ b/it.tests/pom.xml
@@ -21,7 +21,7 @@
     <!-- P A R E N T  P R O J E C T  D E S C R I P T I O N                      -->
     <!-- ====================================================================== -->
     <parent>
-        <groupId>by.gomel.epam</groupId>
+        <groupId>com.company</groupId>
         <artifactId>aem-workbook</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
@@ -90,7 +90,7 @@
         </dependency>
 
         <dependency>
-            <groupId>by.gomel.epam</groupId>
+            <groupId>com.company</groupId>
             <artifactId>aem-workbook.core</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>bundle</type>
