--- a/ui.apps/pom.xml
+++ b/ui.apps/pom.xml
@@ -21,7 +21,7 @@
     <!-- P A R E N T  P R O J E C T  D E S C R I P T I O N                      -->
     <!-- ====================================================================== -->
     <parent>
-        <groupId>by.gomel.epam</groupId>
+        <groupId>com.company</groupId>
         <artifactId>aem-workbook</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
@@ -95,7 +95,7 @@
                     <group>aem-workbook</group>
                     <embeddeds>
                         <embedded>
-                            <groupId>by.gomel.epam</groupId>
+                            <groupId>com.company</groupId>
                             <artifactId>aem-workbook.core</artifactId>
                             <target>/apps/aem-workbook/install</target>
                         </embedded>
@@ -122,7 +122,7 @@
     <!-- ====================================================================== -->
     <dependencies>
         <dependency>
-            <groupId>by.gomel.epam</groupId>
+            <groupId>com.company</groupId>
             <artifactId>aem-workbook.core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
